# AIOps_Groq_Quiz_Buddy

./: .gitignore  .pdm-python  Dockerfile  Jenkinsfile  README.md  app.py  pyproject.toml
manifests/: deployment.yaml  service.yaml
src/: confg.py  exception.py  generator.py  logger.py  manager.py  prompts.py  schema.py
