[project]
name = "aiops-studybudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "pandas>=2.3.2",
    "pdm>=2.25.9",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "pydantic-settings>=2.11.0",
    "pyarrow>=21.0.0",
]


[tool.pdm.build]
package-dir='src'

[tool.pdm]
distribution=true
